test/fail/unterminated-string-newline.rnp
'hello
---
 --> fail/unterminated-string-newline.rnp:1:7
  |
1 | 'hello
  |       ^ Unterminated string
  |
